--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@web3-react/torus-connector": "^6.2.9",
     "@web3-react/walletconnect-connector": "^7.0.2-alpha.0",
     "@web3-react/walletlink-connector": "^6.2.14",
+    "apexcharts": "^3.35.4",
     "d3-array": "^3.1.1",
     "d3-time-format": "^4.1.0",
     "dayjs": "^1.10.8",
@@ -73,13 +74,16 @@
     "next": "12.1.0",
     "paraswap-core": "^1.0.2",
     "react": "latest",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "latest",
     "react-markdown": "^8.0.1",
     "react-number-format": "^4.9.1",
+    "react-responsive-carousel": "^3.2.23",
     "reflect-metadata": "^0.1.13",
     "remark-gfm": "^3.0.1",
     "request": "^2.88.2",
-    "subscriptions-transport-ws": "^0.11.0"
+    "subscriptions-transport-ws": "^0.11.0",
+    "swiper": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.17.7",
