--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@paraswap/sdk": "5.6.0-alpha.3",
+    "@snapshot-labs/snapshot.js": "^0.4.19",
     "@visx/axis": "^2.6.0",
     "@visx/curve": "^2.1.0",
     "@visx/event": "^2.6.0",
