--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@graphql-codegen/typescript-react-apollo": "^3.2.8",
     "@heroicons/react": "^1.0.6",
     "@lingui/react": "^3.13.2",
+    "@monetaria/contract-helpers": "^1.0.1",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@paraswap/sdk": "5.6.0-alpha.3",
