--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@heroicons/react": "^1.0.6",
     "@lingui/react": "^3.13.2",
     "@monetaria/contract-helpers": "^1.0.1",
+    "@monetaria/math-utils": "^1.0.0",
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.1",
     "@paraswap/sdk": "5.6.0-alpha.3",
