--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "reflect-metadata": "^0.1.13",
     "remark-gfm": "^3.0.1",
     "request": "^2.88.2",
+    "rsuite": "^5.23.0",
     "subscriptions-transport-ws": "^0.11.0",
     "swiper": "^8.3.2"
   },
