--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "test:open": "DOTENV_CONFIG_PATH='.env.local' cypress open"
   },
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.32",
     "@apollo/client": "^3.5.10",
     "@emotion/cache": "latest",
     "@emotion/react": "latest",
