--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "react-markdown": "^8.0.1",
     "react-number-format": "^4.9.1",
     "react-responsive-carousel": "^3.2.23",
+    "react-tradingview-widget": "^1.3.2",
     "reflect-metadata": "^0.1.13",
     "remark-gfm": "^3.0.1",
     "request": "^2.88.2",
