--- a/package.json
+++ b/package.json
@@ -124,7 +124,8 @@
     "typescript": "^4.6.2"
   },
   "resolutions": {
-    "@web3-react/walletlink-connector/@coinbase/wallet-sdk": "3.1.0"
+    "@web3-react/walletlink-connector/@coinbase/wallet-sdk": "3.1.0",
+    "ethereumjs-abi": "https://registry.npmjs.org/ethereumjs-abi/-/ethereumjs-abi-0.6.8.tgz"
   },
   "contributors": [
     "Pol Sendra <pol@aave.com>",
