--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "graphql": "^16.2.0",
     "graphql-ws": "^5.6.2",
     "gray-matter": "^4.0.3",
+    "highcharts": "^11.1.0",
+    "highcharts-react-official": "^3.2.0",
     "lowdb": "^3.0.0",
     "next": "12.1.0",
     "paraswap-core": "^1.0.2",
